k8s/s-inventory/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: inventory
  name: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: inventory
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/s-inventory/docker-repo/s-inventory-p
        name: s-inventory-p
        resources: {}
status: {}
