k8s/s-inventory/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: inventory-gateway
  name: inventory-gateway
spec:
  ports:
  - name: "3001"
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: inventory
  type: NodePort
status:
  loadBalancer: {}
